<resources>
    <string name="app_name">AND_Projet</string>
    <string name="title_create">Create</string>
    <string name="title_join">Join</string>
    <string name="title_activity_participant">ParticipantActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="refresh">Refresh</string>
    <string name="room_name">Room name</string>
    <string name="create">Create</string>
    <string name="answers">Answers :</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="enter_your_answer_here">Enter your answer here</string>
    <string name="send">Send</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="question">Question :</string>
</resources>