<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.heigvd.and_projet.view.activities.ParticipantActivity">

    <TextView
        android:id="@+id/participant_answer_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/participant_answer_title"
        app:layout_constraintTop_toBottomOf="@id/participant_answer_title"/>

    <TextView
        android:id="@+id/participant_answer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answers"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/participant_answer_input"
        app:layout_constraintTop_toBottomOf="@id/participant_answer_input"/>

    <EditText
        android:id="@+id/participant_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/participant_answer_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/participant_answer_button"
        android:inputType="textAutoComplete"
        android:hint="@string/enter_your_name_here"
        android:autofillHints="answer" />

    <EditText
        android:id="@+id/participant_answer_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/participant_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/participant_answer_button"
        android:inputType="textAutoComplete"
        android:hint="@string/enter_your_answer_here"
        android:autofillHints="answer" />

    <Button
        android:id="@+id/participant_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/participant_answer_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send"/>

</androidx.constraintlayout.widget.ConstraintLayout>